tests/NormalTests/paczka1/small_fuzzy/97719292.err
Error in line 1: aayR4Zs S803 78,2
Error in line 2: VCMY S803 14,4
Error in line 4: aayR4Zs A48 96,6
Error in line 8: aayR4Zs A103 15,6
